Second code commit

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Git Demo</title>
     </head>
     <body>
-        <h1>Welcome!</h1>
+        <h1>Welcome to GIT</h1>
+        <P>hello</P>
     </body>
 </html>
