--- a/my info.html
+++ b/my info.html
@@ -5,7 +5,7 @@
         <title>SUSHMA ALURU</title>
     </head>
     <body>
-        <img src="images/sushma.jpg" height="100px" style="float:left"
+        <img src="../images/sushma.jpg" height="100px" style="float:left"
 
         <h1>
         <b style=" color:blue; font-size:25px">ALURU SUSHMA</b>
@@ -22,11 +22,24 @@
             <li>Currently pursuing B-Tech 2nd year in SVECW,Bhimavaram.</li>
         </ul>
         <dl> 
-            <dt><b style=" color:crimson;font-size:20px">PROJECT:</b></dt> 
+            <dt><b style=" color:crimson;font-size:20px">PROJECT:</b></dt>
+            <img src="../images/scrabble.png" height="100px" style="float:left"> 
         </dl>
         <ul>
-            <li>PROJECT NAME:Scrabble</li>
-            <li>DESCRIPTION:It is a board game.Two to four players are used to play.It is used to improve our IQ.</li>
+            PROJECT NAME:Scrabble
+            <br>Description:It is a board game.Two to four players are used to play.It is used to improve our IQ.<br>
+        </ul>
+        <dl>
+            <br><br><br>
+            and i participated in "smart india hackthon" on project:Median Accidents
+            <br><br><br>
+            <dt><b style=" color:crimson;font-size:20px">About Me:</b></dt> 
+        </dl>
+        <ul>
+            <li>When i was joined in my b-tech college in 1st year,i was joined in my college sports committe</li>
+            <li>I am a member in sports committe</li>
+            <li>I am a throwball player</li>
+            <li>participated in CCBP4.0 Tech bootcamp</li>
         </ul>
         <dl> 
             <dt><b style=" color:crimson;font-size:20px">HOBBIES:</b></dt> 
@@ -46,6 +59,13 @@
             <li>SVECW</li>
             <li>Bhimavaram</li>
         </ul>
+        <dl> 
+            <dt><b style=" color:crimson;font-size:20px">Profile link:</b></dt> 
+        </dl>
+        <ul>
+            <li>linkedin</li>
+        </ul>
+        
         
     </body>
 </html>
